# Multi-Modular-Image-Search

./: README.md  pyproject.toml
backend/app/: .env  aws_utilities.py  database_util.py  image_processor.py  main.py  readme.md  search_engine.py  util.py
frontend/src/: App.css  App.js  app.py
frontend/src/components/: ImageGallery.js
